WIP: Properly integrate generational mode testing (compiler tests)